# BeeFactory

./: .gitignore  Bee.cpp  Bee.h  BeeTarget.cpp  BeeTarget.h  CMakeLists.txt  Flower.cpp  Flower.h  Garden.cpp  Garden.h  Hive.cpp  Hive.h  README.md  main.cpp
